--- a/rebound-android-playground/build.gradle
+++ b/rebound-android-playground/build.gradle
@@ -1,21 +1,22 @@
 apply plugin: 'com.android.application'
 
 dependencies {
-  compile fileTree(dir: 'libs', include: ['*.jar'])
-  compile project(':rebound-android')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(':rebound-android')
+    implementation project(path: ':rebound-core')
 }
 
 android {
 
-  compileSdkVersion Integer.parseInt(project.ANDROID_COMPILE_SDK_VERSION)
-  buildToolsVersion project.ANDROID_BUILD_TOOLS_VERSION
+    compileSdkVersion Integer.parseInt(project.ANDROID_COMPILE_SDK_VERSION)
+    buildToolsVersion project.ANDROID_BUILD_TOOLS_VERSION
 
-  defaultConfig {
-    applicationId "com.facebook.rebound.androidplayground"
-    versionCode Integer.parseInt(project.VERSION_CODE)
-    versionName project.VERSION_NAME
-    minSdkVersion 19
-    targetSdkVersion Integer.parseInt(project.ANDROID_TARGET_SDK_VERSION)
-  }
+    defaultConfig {
+        applicationId "com.facebook.rebound.androidplayground"
+        versionCode Integer.parseInt(project.VERSION_CODE)
+        versionName project.VERSION_NAME
+        minSdkVersion 19
+        targetSdkVersion Integer.parseInt(project.ANDROID_TARGET_SDK_VERSION)
+    }
 
 }
