--- a/rebound-android/build.gradle
+++ b/rebound-android/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 
 dependencies {
-  compile project(':rebound-core')
+  implementation project(':rebound-core')
 }
 
 android {
